feat: update tsconfig.json to skip library checks and exclude node_modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
         "strict": true,
         "lib": ["esnext"],
         "esModuleInterop": true,
-        "moduleResolution": "nodenext"
-    }
+        "moduleResolution": "nodenext",
+        "skipLibCheck": true
+    },
+    "exclude": ["node_modules/**"]
 }
